<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <!--  Profile Label  -->
    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_label"
        android:textColor="@color/titleBlue"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <!--  Weight Brief  -->
    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileLabel"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/rounded_corner_popup"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/weightGoalsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Weight Goals"
            android:textColor="@color/titleBlue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/weightCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weightGoalsLabel"
            app:cardBackgroundColor="#ECECEC">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weightGoalsLabel"
                android:background="@drawable/rounded_corner_popup"
                android:columnCount="4"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <!-- Current Weight -->
                <ImageView
                    android:id="@+id/currentWeightIcon_weight"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_menu_info_details" />

                <TextView
                    android:id="@+id/currentWeightLabel_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/current_weight_label"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/currentWeightValue_weight"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="90"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/currentWeightUnit_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/weight_unit"
                    android:textColor="#808080"
                    android:textSize="16sp" />

                <!-- Goal Weight -->
                <ImageView
                    android:id="@+id/goalWeightIcon_weight"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_menu_compass" />

                <TextView
                    android:id="@+id/goalWeightLabel_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/goal_weight_label"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/goalWeightValue_weight"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="80"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/goalWeightUnit_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/weight_unit"
                    android:textColor="#808080"
                    android:textSize="16sp" />

                <!-- Weekly Goal -->
                <ImageView
                    android:id="@+id/weeklyGoalIcon_weight"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_menu_view" />

                <TextView
                    android:id="@+id/weeklyGoalLabel_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/weekly_goal_label"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/weeklyGoalValue_weight"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="0.5"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/weeklyGoalUnit_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/weight_unit"
                    android:textColor="#808080"
                    android:textSize="16sp" />

            </GridLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_below="@id/weight"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_corner_popup">

        <TextView
            android:id="@+id/stepsGoalsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Steps Goals"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/titleBlue"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/stepsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stepsGoalsLabel"
            app:cardBackgroundColor="#ECECEC"
            android:visibility="visible">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weightGoalsLabel"
                android:background="@drawable/rounded_corner_popup"
                android:columnCount="4"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <!-- Daily Goal -->
                <ImageView
                    android:id="@+id/dailyGoalIcon_steps"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_menu_view" />

                <TextView
                    android:id="@+id/dailyGoalLabel_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/daily_goal_label"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dailyGoalValue_steps"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="10000"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/dailyGoalUnits_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unit_steps"
                    android:textColor="#808080"
                    android:textSize="16sp" />

            </GridLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <!--  Sleep Brief  -->
    <RelativeLayout
        android:id="@+id/sleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_below="@id/steps"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/rounded_corner_popup">

        <TextView
            android:id="@+id/sleepGoalsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sleep Goals"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/titleBlue"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/sleepCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sleepGoalsLabel"
            app:cardBackgroundColor="#ECECEC"
            android:visibility="visible">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sleepGoalsLabel"
                android:background="@drawable/rounded_corner_popup"
                android:columnCount="4"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <!-- Daily Goal -->
                <ImageView
                    android:id="@+id/dailyGoalIcon_sleep"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_menu_view" />

                <TextView
                    android:id="@+id/dailyGoalLabel_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/daily_goal_label"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dailyGoalValue_sleep"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:ems="10"
                    android:hint="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/dailyGoalUnits_sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unit_hours"
                    android:textColor="#808080"
                    android:textSize="16sp" />

            </GridLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <!--  Save Button  -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sleep"
        android:layout_alignStart="@+id/profileLabel"
        android:layout_alignEnd="@+id/profileLabel"
        android:layout_marginTop="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/titleBlue"
        android:text="@string/save_label" />

    <include
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/navbar"/>
</RelativeLayout>